--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/yakovkhalinsky/hastag",
   "dependencies": {
     "express": "^4.10.4",
-    "socket.io": "^1.2.1"
+    "socket.io": "^1.2.1",
+	"bower": "1.3.8"
   }
 }
