--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "express": "^4.10.4",
     "socket.io": "^1.2.1",
     "bower": "1.3.8",
-    "jade": "^1.8.1",
-    "socket.io": "^1.2.1"
+    "jade": "^1.8.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-less": "^0.12.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-nodemon": "^0.3.0"
   }
 }
